--- a/ans/2.html
+++ b/ans/2.html
@@ -19,7 +19,7 @@
         <div id = "answer" class="block">
                 <p class = "orange bold">정답</p>
                 <p>
-                    <!-- 이곳에 코드를 작성하십시오 -->
+                    gitignore : Git 버전에서 제외할 파일 목록을 지정하는 것이다. 깃허브에 포함되지 않는 파일이다.
                 </p>
         </div>
 
