--- a/ans/3.html
+++ b/ans/3.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <title>문제 3</title>
-        <link rel="stylesheet" href="../src/style.css">
-        <style>
-            /* 필요하면 이곳에 스타일 코드를 작성하시오 */
-        </style>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>문제 3</title>
+    <link rel="stylesheet" href="../src/style.css" />
+    <style>
+      /* 필요하면 이곳에 스타일 코드를 작성하시오 */
+    </style>
+  </head>
 
-    <body>
+  <body>
+    <p class="s-title orange block">세번째 문제의 답안지</p>
 
-        <p class = "s-title orange block">세번째 문제의 답안지</p>
+    <p class="question">
+      한 분야에 특출난 재능 갖기 VS 여러 분야에 대해서 평균 이상으로 잘하기
+    </p>
+    <p class="description">여러분 팀원의 선택은?</p>
 
-        <p class = "question">한 분야에 특출난 재능 갖기 VS 여러 분야에 대해서 평균 이상으로 잘하기</p>
-        <p class = "description">여러분 팀원의 선택은?</p>
+    <div id="example" class="block">
+      <p class="bold">
+        <span class>한지훈</span>
+        <span class="orange">한 분야에 특출난 재능 갖기</span>
+        <span>여러분이 생각하는 이유를 적어주세요</span>
+      </p>
+    </div>
 
-        <div id = "example" class="block">
-            <p class = "bold">
-                <span class>한지훈</span>
-                <span class = "orange">한 분야에 특출난 재능 갖기</span>
-                <span>여러분이 생각하는 이유를 적어주세요</span>
-            </p>
-        </div>
+    <div id="answer" class="block">
+      <!-- 이곳에 코드를 작성하십시오 -->
+      한 분야에 특출난 재능 갖기 (준현, 지애, 혜윤, 재오): 직업을 가지고 돈을 벌
+      수 있다! 여러 분야에 대해서 평균 이상으로 잘하기 (소정): 시간이 흐르면
+      나보다 뛰어난 재능을 가진 사람이 또 나올거니까 ~
+    </div>
 
-        <div id = "answer" class="block">
-            <!-- 이곳에 코드를 작성하십시오 -->
-        </div>
-
-        <p class = "s-title block">LIKELION UNIV. ✕ INHA UNIV.</p>
-
-    </body>
+    <p class="s-title block">LIKELION UNIV. ✕ INHA UNIV.</p>
+  </body>
 </html>
