--- a/ans/4.html
+++ b/ans/4.html
@@ -6,9 +6,10 @@
         <link rel="stylesheet" href="../src/style.css">
         <style>
             /* 필요하면 이곳에도 스타일 코드를 작성하시오 */
-            .answer-heavy {
-                /* 필요하면 이곳에도 스타일 코드를 작성하시오 */
-            }
+                @import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap');
+                .answer-heavy{
+                    font-family: 'Gaegu', cursive;
+                }
         </style>
     </head>
 
